[tool.poetry]
name = "labelwrangler"
version = "0.1.0"
description = "A python swiss army knife for managing csv datasets"
authors = ["James Ravenscroft <ravenscroftj@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "^1.2.4"
click = "^7.1.2"
smart-open = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
